Fixing a syntax error

--- a/challenges.yml
+++ b/challenges.yml
@@ -1159,7 +1159,7 @@ readingformdata_playingwithservercoding:
         want to show something different for mobile apps.
     question_steps:
         - "Dump the `$_SERVER` variable and run your code to figure out which key stores information about what browser you're using. (your code will be graded wrong at first, but don't worry!)"
-        - *Hint* The browser information is a big long string that (in this example) will include `Mozilla` in it.
+        - "*Hint* The browser information is a big long string that (in this example) will include `Mozilla` in it."
         - Print the browser information in the `h3` tag.
     step: reading-form-data-playing-with-server
     files:
