adding missing quotes!

--- a/challenges.yml
+++ b/challenges.yml
@@ -323,7 +323,7 @@ arrays2_converttoassociativecoding:
     question: |
         Our favorite pet - Waggy Pig - is a cute white silly dog.
     question_steps:
-        - Update the code below to use an associative array: set they keys of the array to `name`, `weight`, `age` and `bio`.
+        - "Update the code below to use an associative array: set they keys of the array to `name`, `weight`, `age` and `bio`."
         - "Then, update the code below so Waggy Pig's bio still prints out!"
     step: arrays2-convert-to-associative
     files:
