Fix bad YAML - making the question empty

--- a/challenges.yml
+++ b/challenges.yml
@@ -1110,7 +1110,7 @@ readingformdata_checkhttpmethodcoding:
         But now, if we just *surf* to the page directly (i.e. make a `GET` request),
         we get an error!
     question_step:
-        - Add an `if` statement around our logic so that it only runs when the user submits the form (i.e. makes a `POST` request).
+        - "Add an `if` statement around our logic so that it only runs when the user submits the form (i.e. makes a `POST` request)."
     step: reading-form-data-check-http-method
     files:
         new_toy.php: ~
