Actually, my previous commit was a lie! The YAML was fine, but the key was a typo

--- a/challenges.yml
+++ b/challenges.yml
@@ -1109,7 +1109,7 @@ readingformdata_checkhttpmethodcoding:
 
         But now, if we just *surf* to the page directly (i.e. make a `GET` request),
         we get an error!
-    question_step:
+    question_steps:
         - "Add an `if` statement around our logic so that it only runs when the user submits the form (i.e. makes a `POST` request)."
     step: reading-form-data-check-http-method
     files:
